deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-server-deployment
  labels:
    env: test
    app: server
spec:
  selector:
    matchLabels:
      app: my-server
  template:
    metadata:
      labels:
        app: my-server
    spec:
      containers:
        - name: container-my-server
          image: smirnoff410/cloudcs-lab2:server
          ports:
            - containerPort: 8000
